crates/unstave-report/tests/snapshots/report_renderers__json_aliases.snap
---
source: crates/unstave-report/tests/report_renderers.rs
expression: rendered
---
{
  "schemaVersion": 1,
  "workspace": {
    "root": ".",
    "kind": "single",
    "packages": [
      {
        "root": ".",
        "name": "fixture-aliases",
        "tsconfig": null,
        "sideEffectsFree": false,
        "publicEntrypoints": []
      }
    ]
  },
  "summary": {
    "filesAnalyzed": 4,
    "packages": 1,
    "modules": 4,
    "edges": 3,
    "externalPackages": 0,
    "unresolvedSpecifiers": 0,
    "parseFailures": 0,
    "cycles": 0,
    "deadExports": 1,
    "classifiedBarrels": 2,
    "importedBarrels": 1
  },
  "timings": {
    "discoveryMs": 0,
    "parseMs": 0,
    "resolveMs": 0,
    "totalMs": 0
  },
  "includeTypeEdges": false,
  "externalPackages": [],
  "modules": [
    {
      "id": "m0",
      "path": "src/index.ts",
      "directory": "src",
      "hasSideEffects": false,
      "barrel": {
        "kind": "pure",
        "exportCount": 1,
        "reexportCount": 1,
        "ownDeclCount": 0,
        "reexportRatio": 1.0
      },
      "inCycle": false
    },
    {
      "id": "m1",
      "path": "src/inner/impl.ts",
      "directory": "src/inner",
      "hasSideEffects": false,
      "barrel": null,
      "inCycle": false
    },
    {
      "id": "m2",
      "path": "src/inner/index.ts",
      "directory": "src/inner",
      "hasSideEffects": false,
      "barrel": {
        "kind": "pure",
        "exportCount": 1,
        "reexportCount": 1,
        "ownDeclCount": 0,
        "reexportRatio": 1.0
      },
      "inCycle": false
    },
    {
      "id": "m3",
      "path": "src/main.ts",
      "directory": "src",
      "hasSideEffects": false,
      "barrel": null,
      "inCycle": false
    }
  ],
  "edges": [
    {
      "source": "m0",
      "target": "m2",
      "kind": "reExport"
    },
    {
      "source": "m2",
      "target": "m1",
      "kind": "reExport"
    },
    {
      "source": "m3",
      "target": "m0",
      "kind": "static"
    }
  ],
  "danglingEdges": [],
  "unresolvedSpecifiers": [],
  "parseFailures": [],
  "cycles": [],
  "deadExports": [
    {
      "module": "src/main.ts",
      "name": "used",
      "lowConfidence": false
    }
  ],
  "fan": {
    "fanIn": [
      {
        "path": "src/inner/impl.ts",
        "direct": 1,
        "transitive": 3
      },
      {
        "path": "src/inner/index.ts",
        "direct": 1,
        "transitive": 2
      },
      {
        "path": "src/index.ts",
        "direct": 1,
        "transitive": 1
      }
    ],
    "fanOut": [
      {
        "path": "src/main.ts",
        "direct": 1,
        "transitive": 3
      },
      {
        "path": "src/index.ts",
        "direct": 1,
        "transitive": 2
      },
      {
        "path": "src/inner/index.ts",
        "direct": 1,
        "transitive": 1
      }
    ]
  },
  "amplification": {
    "classifiedBarrels": 2,
    "sites": [
      {
        "importer": "src/main.ts",
        "barrel": "src/index.ts",
        "span": {
          "start": 0,
          "end": 36
        },
        "symbols": [
          "FinalName"
        ],
        "actualCost": 3,
        "minimalCost": 1,
        "excess": 2,
        "amplification": 3.0,
        "rewritable": [
          {
            "symbol": "FinalName",
            "definition": "src/inner/impl.ts"
          }
        ],
        "skipped": []
      }
    ],
    "barrels": [
      {
        "barrel": "src/index.ts",
        "importSites": 1,
        "actualCost": 3,
        "worstExcess": 2,
        "totalExcess": 2,
        "maxAmplification": 3.0,
        "hasSideEffects": false,
        "rewritableSymbols": 1,
        "skippedSymbols": 0
      }
    ],
    "entrypoints": [],
    "skippedByReason": []
  }
}
