crates/unstave-report/tests/snapshots/report_renderers__json_bare-barrel-import.snap
---
source: crates/unstave-report/tests/report_renderers.rs
expression: rendered
---
{
  "schemaVersion": 2,
  "workspace": {
    "root": ".",
    "kind": "single",
    "packages": [
      {
        "root": ".",
        "name": "fixture-bare-barrel-import",
        "tsconfig": null,
        "sideEffectsFree": false,
        "publicEntrypoints": []
      }
    ]
  },
  "summary": {
    "filesAnalyzed": 5,
    "packages": 1,
    "modules": 5,
    "edges": 5,
    "externalPackages": 0,
    "unresolvedSpecifiers": 0,
    "parseFailures": 0,
    "cycles": 0,
    "deadExports": 4,
    "classifiedBarrels": 1,
    "importedBarrels": 1
  },
  "timings": {
    "discoveryMs": 0,
    "parseMs": 0,
    "resolveMs": 0,
    "totalMs": 0
  },
  "includeTypeEdges": false,
  "externalPackages": [],
  "modules": [
    {
      "id": "m0",
      "path": "src/main.ts",
      "directory": "src",
      "hasSideEffects": false,
      "barrel": null,
      "inCycle": false
    },
    {
      "id": "m1",
      "path": "src/widgets/index.ts",
      "directory": "src/widgets",
      "hasSideEffects": false,
      "barrel": {
        "kind": "pure",
        "exportCount": 3,
        "reexportCount": 3,
        "ownDeclCount": 0,
        "reexportRatio": 1.0
      },
      "inCycle": false
    },
    {
      "id": "m2",
      "path": "src/widgets/one.ts",
      "directory": "src/widgets",
      "hasSideEffects": false,
      "barrel": null,
      "inCycle": false
    },
    {
      "id": "m3",
      "path": "src/widgets/three.ts",
      "directory": "src/widgets",
      "hasSideEffects": false,
      "barrel": null,
      "inCycle": false
    },
    {
      "id": "m4",
      "path": "src/widgets/two.ts",
      "directory": "src/widgets",
      "hasSideEffects": false,
      "barrel": null,
      "inCycle": false
    }
  ],
  "edges": [
    {
      "source": "m0",
      "target": "m1",
      "kind": "dynamic"
    },
    {
      "source": "m0",
      "target": "m1",
      "kind": "sideEffectOnly"
    },
    {
      "source": "m1",
      "target": "m2",
      "kind": "reExport"
    },
    {
      "source": "m1",
      "target": "m3",
      "kind": "reExport"
    },
    {
      "source": "m1",
      "target": "m4",
      "kind": "reExport"
    }
  ],
  "danglingEdges": [],
  "unresolvedSpecifiers": [],
  "parseFailures": [],
  "cycles": [],
  "deadExports": [
    {
      "module": "src/main.ts",
      "name": "boot",
      "lowConfidence": false
    },
    {
      "module": "src/widgets/one.ts",
      "name": "OneWidget",
      "lowConfidence": true
    },
    {
      "module": "src/widgets/three.ts",
      "name": "ThreeWidget",
      "lowConfidence": true
    },
    {
      "module": "src/widgets/two.ts",
      "name": "TwoWidget",
      "lowConfidence": true
    }
  ],
  "fan": {
    "fanIn": [
      {
        "path": "src/widgets/one.ts",
        "direct": 1,
        "transitive": 2
      },
      {
        "path": "src/widgets/three.ts",
        "direct": 1,
        "transitive": 2
      },
      {
        "path": "src/widgets/two.ts",
        "direct": 1,
        "transitive": 2
      },
      {
        "path": "src/widgets/index.ts",
        "direct": 1,
        "transitive": 1
      }
    ],
    "fanOut": [
      {
        "path": "src/main.ts",
        "direct": 1,
        "transitive": 4
      },
      {
        "path": "src/widgets/index.ts",
        "direct": 3,
        "transitive": 3
      }
    ]
  },
  "amplification": {
    "classifiedBarrels": 1,
    "sites": [
      {
        "importer": "src/main.ts",
        "barrel": "src/widgets/index.ts",
        "span": {
          "start": 75,
          "end": 100
        },
        "symbols": [],
        "actualCost": 4,
        "minimalCost": 4,
        "excess": 0,
        "amplification": 1.0,
        "rewritable": [],
        "skipped": []
      },
      {
        "importer": "src/main.ts",
        "barrel": "src/widgets/index.ts",
        "span": {
          "start": 141,
          "end": 166
        },
        "symbols": [],
        "actualCost": 4,
        "minimalCost": 4,
        "excess": 0,
        "amplification": 1.0,
        "rewritable": [],
        "skipped": []
      }
    ],
    "barrels": [
      {
        "barrel": "src/widgets/index.ts",
        "importSites": 2,
        "actualCost": 4,
        "worstExcess": 0,
        "totalExcess": 0,
        "maxAmplification": 1.0,
        "hasSideEffects": false,
        "rewritableSymbols": 0,
        "skippedSymbols": 0
      }
    ],
    "entrypoints": [],
    "skippedByReason": []
  }
}
