crates/unstave-report/tests/snapshots/report_renderers__json_pure-barrel.snap
---
source: crates/unstave-report/tests/report_renderers.rs
expression: rendered
---
{
  "schemaVersion": 1,
  "workspace": {
    "root": ".",
    "kind": "single",
    "packages": [
      {
        "root": ".",
        "name": "fixture-pure-barrel",
        "tsconfig": "tsconfig.json",
        "sideEffectsFree": false,
        "publicEntrypoints": []
      }
    ]
  },
  "summary": {
    "filesAnalyzed": 7,
    "packages": 1,
    "modules": 7,
    "edges": 6,
    "externalPackages": 0,
    "unresolvedSpecifiers": 0,
    "parseFailures": 0,
    "cycles": 0,
    "deadExports": 5,
    "classifiedBarrels": 1,
    "importedBarrels": 1
  },
  "timings": {
    "discoveryMs": 0,
    "parseMs": 0,
    "resolveMs": 0,
    "totalMs": 0
  },
  "includeTypeEdges": false,
  "externalPackages": [],
  "modules": [
    {
      "id": "m0",
      "path": "src/clients/alpha.ts",
      "directory": "src/clients",
      "hasSideEffects": false,
      "barrel": null,
      "inCycle": false
    },
    {
      "id": "m1",
      "path": "src/clients/beta.ts",
      "directory": "src/clients",
      "hasSideEffects": false,
      "barrel": null,
      "inCycle": false
    },
    {
      "id": "m2",
      "path": "src/clients/delta.ts",
      "directory": "src/clients",
      "hasSideEffects": false,
      "barrel": null,
      "inCycle": false
    },
    {
      "id": "m3",
      "path": "src/clients/epsilon.ts",
      "directory": "src/clients",
      "hasSideEffects": false,
      "barrel": null,
      "inCycle": false
    },
    {
      "id": "m4",
      "path": "src/clients/gamma.ts",
      "directory": "src/clients",
      "hasSideEffects": false,
      "barrel": null,
      "inCycle": false
    },
    {
      "id": "m5",
      "path": "src/clients/index.ts",
      "directory": "src/clients",
      "hasSideEffects": false,
      "barrel": {
        "kind": "pure",
        "exportCount": 5,
        "reexportCount": 5,
        "ownDeclCount": 0,
        "reexportRatio": 1.0
      },
      "inCycle": false
    },
    {
      "id": "m6",
      "path": "src/main.ts",
      "directory": "src",
      "hasSideEffects": false,
      "barrel": null,
      "inCycle": false
    }
  ],
  "edges": [
    {
      "source": "m5",
      "target": "m0",
      "kind": "reExport"
    },
    {
      "source": "m5",
      "target": "m1",
      "kind": "reExport"
    },
    {
      "source": "m5",
      "target": "m2",
      "kind": "reExport"
    },
    {
      "source": "m5",
      "target": "m3",
      "kind": "reExport"
    },
    {
      "source": "m5",
      "target": "m4",
      "kind": "reExport"
    },
    {
      "source": "m6",
      "target": "m5",
      "kind": "static"
    }
  ],
  "danglingEdges": [],
  "unresolvedSpecifiers": [],
  "parseFailures": [],
  "cycles": [],
  "deadExports": [
    {
      "module": "src/clients/beta.ts",
      "name": "BetaClient",
      "lowConfidence": false
    },
    {
      "module": "src/clients/delta.ts",
      "name": "DeltaClient",
      "lowConfidence": false
    },
    {
      "module": "src/clients/epsilon.ts",
      "name": "EpsilonClient",
      "lowConfidence": false
    },
    {
      "module": "src/clients/gamma.ts",
      "name": "GammaClient",
      "lowConfidence": false
    },
    {
      "module": "src/main.ts",
      "name": "client",
      "lowConfidence": false
    }
  ],
  "fan": {
    "fanIn": [
      {
        "path": "src/clients/alpha.ts",
        "direct": 1,
        "transitive": 2
      },
      {
        "path": "src/clients/beta.ts",
        "direct": 1,
        "transitive": 2
      },
      {
        "path": "src/clients/delta.ts",
        "direct": 1,
        "transitive": 2
      },
      {
        "path": "src/clients/epsilon.ts",
        "direct": 1,
        "transitive": 2
      },
      {
        "path": "src/clients/gamma.ts",
        "direct": 1,
        "transitive": 2
      },
      {
        "path": "src/clients/index.ts",
        "direct": 1,
        "transitive": 1
      }
    ],
    "fanOut": [
      {
        "path": "src/main.ts",
        "direct": 1,
        "transitive": 6
      },
      {
        "path": "src/clients/index.ts",
        "direct": 5,
        "transitive": 5
      }
    ]
  },
  "amplification": {
    "classifiedBarrels": 1,
    "sites": [
      {
        "importer": "src/main.ts",
        "barrel": "src/clients/index.ts",
        "span": {
          "start": 0,
          "end": 40
        },
        "symbols": [
          "AlphaClient"
        ],
        "actualCost": 6,
        "minimalCost": 1,
        "excess": 5,
        "amplification": 6.0,
        "rewritable": [
          {
            "symbol": "AlphaClient",
            "definition": "src/clients/alpha.ts"
          }
        ],
        "skipped": []
      }
    ],
    "barrels": [
      {
        "barrel": "src/clients/index.ts",
        "importSites": 1,
        "actualCost": 6,
        "worstExcess": 5,
        "totalExcess": 5,
        "maxAmplification": 6.0,
        "hasSideEffects": false,
        "rewritableSymbols": 1,
        "skippedSymbols": 0
      }
    ],
    "entrypoints": [],
    "skippedByReason": []
  }
}
