crates/unstave-report/tests/snapshots/report_renderers__json_side-effects.snap
---
source: crates/unstave-report/tests/report_renderers.rs
expression: rendered
---
{
  "schemaVersion": 1,
  "workspace": {
    "root": ".",
    "kind": "single",
    "packages": [
      {
        "root": ".",
        "name": "fixture-side-effects",
        "tsconfig": null,
        "sideEffectsFree": false,
        "publicEntrypoints": []
      }
    ]
  },
  "summary": {
    "filesAnalyzed": 4,
    "packages": 1,
    "modules": 4,
    "edges": 3,
    "externalPackages": 0,
    "unresolvedSpecifiers": 0,
    "parseFailures": 0,
    "cycles": 0,
    "deadExports": 2,
    "classifiedBarrels": 1,
    "importedBarrels": 1
  },
  "timings": {
    "discoveryMs": 0,
    "parseMs": 0,
    "resolveMs": 0,
    "totalMs": 0
  },
  "includeTypeEdges": false,
  "externalPackages": [],
  "modules": [
    {
      "id": "m0",
      "path": "src/index.ts",
      "directory": "src",
      "hasSideEffects": true,
      "barrel": {
        "kind": "pure",
        "exportCount": 2,
        "reexportCount": 2,
        "ownDeclCount": 0,
        "reexportRatio": 1.0
      },
      "inCycle": false
    },
    {
      "id": "m1",
      "path": "src/main.ts",
      "directory": "src",
      "hasSideEffects": false,
      "barrel": null,
      "inCycle": false
    },
    {
      "id": "m2",
      "path": "src/other.ts",
      "directory": "src",
      "hasSideEffects": false,
      "barrel": null,
      "inCycle": false
    },
    {
      "id": "m3",
      "path": "src/tracked.ts",
      "directory": "src",
      "hasSideEffects": false,
      "barrel": null,
      "inCycle": false
    }
  ],
  "edges": [
    {
      "source": "m0",
      "target": "m2",
      "kind": "reExport"
    },
    {
      "source": "m0",
      "target": "m3",
      "kind": "reExport"
    },
    {
      "source": "m1",
      "target": "m0",
      "kind": "static"
    }
  ],
  "danglingEdges": [],
  "unresolvedSpecifiers": [],
  "parseFailures": [],
  "cycles": [],
  "deadExports": [
    {
      "module": "src/main.ts",
      "name": "used",
      "lowConfidence": false
    },
    {
      "module": "src/other.ts",
      "name": "other",
      "lowConfidence": false
    }
  ],
  "fan": {
    "fanIn": [
      {
        "path": "src/other.ts",
        "direct": 1,
        "transitive": 2
      },
      {
        "path": "src/tracked.ts",
        "direct": 1,
        "transitive": 2
      },
      {
        "path": "src/index.ts",
        "direct": 1,
        "transitive": 1
      }
    ],
    "fanOut": [
      {
        "path": "src/main.ts",
        "direct": 1,
        "transitive": 3
      },
      {
        "path": "src/index.ts",
        "direct": 2,
        "transitive": 2
      }
    ]
  },
  "amplification": {
    "classifiedBarrels": 1,
    "sites": [
      {
        "importer": "src/main.ts",
        "barrel": "src/index.ts",
        "span": {
          "start": 0,
          "end": 34
        },
        "symbols": [
          "tracked"
        ],
        "actualCost": 3,
        "minimalCost": 1,
        "excess": 2,
        "amplification": 3.0,
        "rewritable": [],
        "skipped": [
          {
            "symbol": "tracked",
            "reason": "barrelHasSideEffects"
          }
        ]
      }
    ],
    "barrels": [
      {
        "barrel": "src/index.ts",
        "importSites": 1,
        "actualCost": 3,
        "worstExcess": 2,
        "totalExcess": 2,
        "maxAmplification": 3.0,
        "hasSideEffects": true,
        "rewritableSymbols": 0,
        "skippedSymbols": 1
      }
    ],
    "entrypoints": [],
    "skippedByReason": [
      {
        "reason": "barrelHasSideEffects",
        "symbols": 1
      }
    ]
  }
}
