crates/unstave-report/tests/snapshots/report_renderers__json_simple.snap
---
source: crates/unstave-report/tests/report_renderers.rs
expression: rendered
---
{
  "schemaVersion": 2,
  "workspace": {
    "root": ".",
    "kind": "single",
    "packages": [
      {
        "root": ".",
        "name": "fixture-simple",
        "tsconfig": "tsconfig.json",
        "sideEffectsFree": false,
        "publicEntrypoints": []
      }
    ]
  },
  "summary": {
    "filesAnalyzed": 3,
    "packages": 1,
    "modules": 3,
    "edges": 2,
    "externalPackages": 0,
    "unresolvedSpecifiers": 0,
    "parseFailures": 0,
    "cycles": 0,
    "deadExports": 3,
    "classifiedBarrels": 0,
    "importedBarrels": 0
  },
  "timings": {
    "discoveryMs": 0,
    "parseMs": 0,
    "resolveMs": 0,
    "totalMs": 0
  },
  "includeTypeEdges": false,
  "externalPackages": [],
  "modules": [
    {
      "id": "m0",
      "path": "src/greet.ts",
      "directory": "src",
      "hasSideEffects": false,
      "barrel": null,
      "inCycle": false
    },
    {
      "id": "m1",
      "path": "src/main.ts",
      "directory": "src",
      "hasSideEffects": false,
      "barrel": null,
      "inCycle": false
    },
    {
      "id": "m2",
      "path": "src/math.ts",
      "directory": "src",
      "hasSideEffects": false,
      "barrel": null,
      "inCycle": false
    }
  ],
  "edges": [
    {
      "source": "m1",
      "target": "m0",
      "kind": "static"
    },
    {
      "source": "m1",
      "target": "m2",
      "kind": "static"
    }
  ],
  "danglingEdges": [],
  "unresolvedSpecifiers": [],
  "parseFailures": [],
  "cycles": [],
  "deadExports": [
    {
      "module": "src/main.ts",
      "name": "message",
      "lowConfidence": false
    },
    {
      "module": "src/main.ts",
      "name": "reader",
      "lowConfidence": false
    },
    {
      "module": "src/main.ts",
      "name": "result",
      "lowConfidence": false
    }
  ],
  "fan": {
    "fanIn": [
      {
        "path": "src/greet.ts",
        "direct": 1,
        "transitive": 1
      },
      {
        "path": "src/math.ts",
        "direct": 1,
        "transitive": 1
      }
    ],
    "fanOut": [
      {
        "path": "src/main.ts",
        "direct": 2,
        "transitive": 2
      }
    ]
  },
  "amplification": {
    "classifiedBarrels": 0,
    "sites": [],
    "barrels": [],
    "entrypoints": [],
    "skippedByReason": []
  }
}
