crates/unstave-report/tests/snapshots/report_renderers__json_star-collision.snap
---
source: crates/unstave-report/tests/report_renderers.rs
expression: rendered
---
{
  "schemaVersion": 2,
  "workspace": {
    "root": ".",
    "kind": "single",
    "packages": [
      {
        "root": ".",
        "name": "fixture-star-collision",
        "tsconfig": null,
        "sideEffectsFree": false,
        "publicEntrypoints": []
      }
    ]
  },
  "summary": {
    "filesAnalyzed": 5,
    "packages": 1,
    "modules": 5,
    "edges": 4,
    "externalPackages": 0,
    "unresolvedSpecifiers": 0,
    "parseFailures": 0,
    "cycles": 0,
    "deadExports": 5,
    "classifiedBarrels": 0,
    "importedBarrels": 0
  },
  "timings": {
    "discoveryMs": 0,
    "parseMs": 0,
    "resolveMs": 0,
    "totalMs": 0
  },
  "includeTypeEdges": false,
  "externalPackages": [],
  "modules": [
    {
      "id": "m0",
      "path": "src/index.ts",
      "directory": "src",
      "hasSideEffects": false,
      "barrel": null,
      "inCycle": false
    },
    {
      "id": "m1",
      "path": "src/left.ts",
      "directory": "src",
      "hasSideEffects": false,
      "barrel": null,
      "inCycle": false
    },
    {
      "id": "m2",
      "path": "src/main.ts",
      "directory": "src",
      "hasSideEffects": false,
      "barrel": null,
      "inCycle": false
    },
    {
      "id": "m3",
      "path": "src/right.ts",
      "directory": "src",
      "hasSideEffects": false,
      "barrel": null,
      "inCycle": false
    },
    {
      "id": "m4",
      "path": "src/shadowed.ts",
      "directory": "src",
      "hasSideEffects": false,
      "barrel": null,
      "inCycle": false
    }
  ],
  "edges": [
    {
      "source": "m0",
      "target": "m1",
      "kind": "reExport"
    },
    {
      "source": "m0",
      "target": "m3",
      "kind": "reExport"
    },
    {
      "source": "m2",
      "target": "m0",
      "kind": "static"
    },
    {
      "source": "m4",
      "target": "m1",
      "kind": "reExport"
    }
  ],
  "danglingEdges": [],
  "unresolvedSpecifiers": [],
  "parseFailures": [],
  "cycles": [],
  "deadExports": [
    {
      "module": "src/left.ts",
      "name": "shared",
      "lowConfidence": true
    },
    {
      "module": "src/main.ts",
      "name": "all",
      "lowConfidence": false
    },
    {
      "module": "src/right.ts",
      "name": "onlyRight",
      "lowConfidence": true
    },
    {
      "module": "src/right.ts",
      "name": "shared",
      "lowConfidence": true
    },
    {
      "module": "src/shadowed.ts",
      "name": "shared",
      "lowConfidence": false
    }
  ],
  "fan": {
    "fanIn": [
      {
        "path": "src/left.ts",
        "direct": 2,
        "transitive": 3
      },
      {
        "path": "src/right.ts",
        "direct": 1,
        "transitive": 2
      },
      {
        "path": "src/index.ts",
        "direct": 1,
        "transitive": 1
      }
    ],
    "fanOut": [
      {
        "path": "src/main.ts",
        "direct": 1,
        "transitive": 3
      },
      {
        "path": "src/index.ts",
        "direct": 2,
        "transitive": 2
      },
      {
        "path": "src/shadowed.ts",
        "direct": 1,
        "transitive": 1
      }
    ]
  },
  "amplification": {
    "classifiedBarrels": 0,
    "sites": [],
    "barrels": [],
    "entrypoints": [],
    "skippedByReason": []
  }
}
